# mindbox-test-repo2

./: .gitignore  README.md
1/: README.md
1/geometry-calculator/: README.md  pyproject.toml
1/geometry-calculator/geometry_calculator/: __init__.py  main.py
1/geometry-calculator/geometry_calculator/application/services/: geometry_calculator.py
1/geometry-calculator/geometry_calculator/domain/entities/: circle.py  shape.py  triangle.py
1/geometry-calculator/geometry_calculator/infrastructure/factories/: shape_factory.py
1/geometry-calculator/tests/application/: test_geometry_calculator.py
1/geometry-calculator/tests/domain/: test_entities.py
1/geometry-calculator/tests/infrastructure/: test_shape_factory.py
1/package_test/: main.py  pyproject.toml
2/: README.md  pyproject.toml
2/src/: main.py
