[project]
name = "geometry-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
dev = [
    "ruff>=0.11.7",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geometry_calculator"]
